# raksha

./: .bazelignore  .bazelrc  .dockerignore  .gcloudignore  .gitignore  BUILD  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  WORKSPACE  build.rs  cloudbuild.yaml
rust/tools/authorization-logic/: BUILD  Cargo.toml  README.md  build.rs  build_transparent_release_bin.sh
rust/tools/authorization-logic/.cargo/: config.toml
rust/tools/authorization-logic/cargo/: BUILD.bazel
rust/tools/authorization-logic/rakhsa_examples/: VisionPipelineAuthLogic
rust/tools/authorization-logic/raksha_examples/: VisionPipelineAuthLogic  VisionPipelineAuthLogic.dl  VisionPipelineSimple
rust/tools/authorization-logic/raksha_examples/multimic-no-overrides/: multimic.arcs  multimic.auth  multimic.authlogic
rust/tools/authorization-logic/raksha_examples/multimic-overrides/: multimic-preferences.authlogic
rust/tools/authorization-logic/raksha_examples/policy_patterns/: NonUnanimousDecisions  README
rust/tools/authorization-logic/scripts/: lint_readme.sh
rust/tools/authorization-logic/src/: ast.rs  compilation_top_level.rs  lib.rs  main.rs  merge_multiprogram.rs
rust/tools/authorization-logic/src/parsing/: AuthLogic.g4  astconstructionvisitor.rs  mod.rs
rust/tools/authorization-logic/src/signing/: export_assertions.rs  import_assertions.rs  mod.rs  tink_interface.rs
rust/tools/authorization-logic/src/souffle/: datalog_ir.rs  lowering_ast_datalog.rs  mod.rs  souffle_emitter.rs  souffle_interface.rs  universe_translation.rs
rust/tools/authorization-logic/src/test/: mod.rs  test_claim_importing.rs  test_decl_skip.rs  test_dots_and_quotes.rs  test_export_signatures.rs  test_hyphen_ids.rs  test_multimic_no_overrides.rs  test_multimic_overrides.rs  test_multiprogram.rs  test_multiverse_handling.rs  test_negation.rs  test_num_compare.rs  test_num_string_names.rs  test_parser.rs  test_queries.rs  test_relation_declarations.rs  test_signing.rs  test_type_declarations.rs  (+1 more)
rust/tools/authorization-logic/test_inputs/: VisionPipelineAuthLogic  canActAs  canActAs.auth  comparisons_with_delegation  comparisons_with_delegation.auth  conditions  conditions.auth  delegations.auth  dotsInNames  dotsInNames.auth  exporting  hyphenIDs  importing  importing_export_half  multiprogram_part1.auth_logic  multiprogram_part2.auth_logic  multiverse_handling.auth  negation  numStringsInNames  numStringsInNames.auth  quotesInExports  testDeclSkip  testDeclSkip.auth  typeDeclarations  type_error.auth
rust/tools/authorization-logic/transparent_release_prototype/: ec_public.pem  endorsement_file.toml  endorsement_file.toml.sig  provenance_file.toml  rekor_instructions.txt  rekor_log_cli_output.txt  transparent_release.auth_logic
(+1102 files in other folders)
