[package]
name = "auth-logic-prototype"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "=0.2"
tink-core = {version = "^0.2", features = ["json", "insecure"]}
tink-signature = "^0.2"
# bincode and serde are used for signing policy claims
bincode = "^1.1.4"
serde = "^1.0"

