[package]
name = "auth-logic-prototype"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "=0.2"
tink-core = {version = "^0.2", features = ["json", "insecure"]}
tink-signature = "^0.2"
# bincode and serde are used for signing policy claims
bincode = "^1.1.4"
serde = "^1.0"
structopt = "0.3"

[package.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//third_party/cargo"

output_buildfile_suffix = "BUILD.bazel"
default_gen_buildrs = false

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
# package_aliases_dir = "."

# The set of targets to generate BUILD rules for.
targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"

[package.metadata.raze.crates.serde.'1.0.26']
gen_buildrs = true

[package.metadata.raze.crates.structopt.'0.3']
gen_buildrs = true

[package.metadata.raze.crates.tink-proto.'0.2.0']
gen_buildrs = true
build_data_dependencies = ["@com_google_protobuf//:protoc"]

[package.metadata.raze.crates.tink-proto.'0.2.0'.buildrs_additional_environment_variables]
PROTOC = "$(execpath @com_google_protobuf//:protoc)"

[package.metadata.raze.crates.typenum.'*']
gen_buildrs = true
additional_flags = [
    "--cfg=feature=\\\"force_unix_path_separator\\\""
]

[package.metadata.raze.crates.indexmap.'1.6.0']
gen_buildrs = true
additional_flags = [
    "--cfg=has_std",
]

[package.metadata.raze.crates.proc-macro2.'1.0.26']
additional_flags = [
    "--cfg=use_proc_macro",
]

[package.metadata.raze.crates.prost-build.'*']
gen_buildrs = true
build_data_dependencies = ["@com_google_protobuf//:protoc"]
